--- a/content/pages/rules/credentials/129/index.adoc
+++ b/content/pages/rules/credentials/129/index.adoc
@@ -9,5 +9,5 @@
 == Requirement
 
 The system must not allow password changes for a user
-if the new password matches one of the previous +5+ passwords
+if the new password matches one of the previous *5* passwords
 for the same user.
