--- a/content/pages/rules/credentials/139/index.adoc
+++ b/content/pages/rules/credentials/139/index.adoc
@@ -35,7 +35,14 @@ or by the verifier (e.g., when a user requests a new PIN)
 SHALL be at least 6 characters in length
 and SHALL be generated using an approved random bit generator.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r3]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+Application functions related to authentication and session management are
+often implemented incorrectly,
+allowing attackers to compromise passwords, keys, or session tokens,
+or to exploit other implementation flaws to assume other users’ identities
+temporarily or permanently.
+
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.3 Authenticator Lifecycle Requirements.(2.3.1)]
 Verify system generated initial passwords or activation codes SHOULD
 be securely randomly generated,
