--- a/content/pages/rules/authentication/334/index.adoc
+++ b/content/pages/rules/authentication/334/index.adoc
@@ -34,7 +34,14 @@ that is accessible to an unauthenticated claimant.
 Verifiers SHALL NOT prompt subscribers to use specific types of information
 (e.g., “What was the name of your first pet?”) when choosing memorized secrets.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r3]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+Application functions related to authentication and session management are
+often implemented incorrectly,
+allowing attackers to compromise passwords, keys, or session tokens,
+or to exploit other implementation flaws to assume other users’ identities
+temporarily or permanently.
+
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.5 Credential Recovery Requirements.(2.5.2)]
 Verify password hints or knowledge-based authentication
 (so-called "secret questions") are not present.
