--- a/content/pages/rules/credentials/131/index.adoc
+++ b/content/pages/rules/credentials/131/index.adoc
@@ -12,7 +12,14 @@ Passwords are not allowed to be changed more than once in the same day.
 
 == References
 
-. [[r1]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[+OWASP-ASVS v3.1-2.8+]
+. [[r1]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+Application functions related to authentication and session management are
+often implemented incorrectly,
+allowing attackers to compromise passwords, keys, or session tokens,
+or to exploit other implementation flaws to assume other users’ identities
+temporarily or permanently.
+
+. [[r2]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[OWASP-ASVS v3.1-2.8]
 Verify all identity functions
 (e.g. forgot password, change password, change email, manage 2FA token, etc.)
 have the security controls,
