--- a/content/pages/rules/credentials/141/index.adoc
+++ b/content/pages/rules/credentials/141/index.adoc
@@ -1,6 +1,6 @@
 :slug: rules/141/
 :category: credentials
-:description: This requirement establishes the importance of forcing users to re-authenticate after a password change occurs.
+:description: This requirement establishes the importance of forcing users to re-authenticate after their account changes.
 :keywords: Re-authentication, Force, Password, Change, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
@@ -8,9 +8,9 @@
 
 == Requirement
 
-The system must force a user to re-authenticate or invalidate their session
+The system must force users to re-authenticate or invalidate their session
 if the state of their account changes
-(password change/recovery, lockouts, user deletion, etc.).
+(e.g. password change/recovery, lockouts, user deletion, etc.).
 
 == Findings
 
@@ -18,19 +18,22 @@ if the state of their account changes
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/613.html[CWE-613: Insufficient Session Expiration]
-According to WASC, "Insufficient Session Expiration is when a web site permits
-an attacker to reuse old session credentials or session IDs for authorization."
+. [[r1]] link:https://cwe.mitre.org/data/definitions/613.html[CWE-613: Insufficient Session Expiration].
+Insufficient Session Expiration is when a web site permits
+an attacker to reuse old session credentials or session IDs for authorization.
 
-. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
-V3.3 Session Logout and Timeout Requirements.(3.3.3)]
-Verify that the application terminates all other active sessions after a
-successful password change,
-and that this is effective across the application, federated login
-(if present), and any relying parties.
+. [[r2]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+Application functions related to authentication and session management are
+often implemented incorrectly,
+allowing attackers to compromise passwords, keys, or session tokens.
 
 . [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V3.3 Session Logout and Timeout Requirements.(3.3.3)]
+Verify that the application terminates all other active sessions after a
+successful password change.
+
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V3.7 Defenses Against Session Management Exploits.(3.7.1)]
 Verify the application ensures a valid login session or requires
-re- authentication or secondary verification before allowing any sensitive
+re-authentication or secondary verification before allowing any sensitive
 transactions or account modifications.
