--- a/content/pages/rules/credentials/332/index.adoc
+++ b/content/pages/rules/credentials/332/index.adoc
@@ -33,13 +33,20 @@ which makes it easier for attackers to compromise user accounts.
 Verifiers SHALL compare the prospective secrets against a list that contains
 values known to be commonly-used, expected, or compromised.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r3]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+Application functions related to authentication and session management are
+often implemented incorrectly,
+allowing attackers to compromise passwords, keys, or session tokens,
+or to exploit other implementation flaws to assume other users’ identities
+temporarily or permanently.
+
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.1 Password Security Requirements.(2.1.7)]
 Verify that passwords submitted during account registration, login, and
 password change are checked against a set of breached passwords either locally
 or using an external API.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.2 General Authenticator Requirements.(2.2.1)]
 Verify that anti-automation controls are effective at mitigating breached
 credential testing, brute force, and account lockout attacks.
