feat(doc): #2994.249 add owasp top 10 refs
- Added OWASP Top 10 references to R209, R023, R025, R027, R028,
R029, R030, R031 and R032


Former-commit-id: bbcc11407209c40f77ba0b7ef46dca73df998b8c

--- a/content/pages/rules/devices/205/index.adoc
+++ b/content/pages/rules/devices/205/index.adoc
@@ -9,5 +9,5 @@
 == Requirement
 
 Devices that connect to the mobile network
-must have a personal identification number (+PIN+)
-configured on the +SIM+ card.
+must have a personal identification number (**PIN**)
+configured on the *SIM* card.
