--- a/content/pages/rules/session/027/index.adoc
+++ b/content/pages/rules/session/027/index.adoc
@@ -14,12 +14,19 @@ from any resource protected by authentication.
 
 == References
 
-. [[r1]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[+NIST+ 800-53 AC-2 (2)]
+. [[r1]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (2)]
 El sistema de información automáticamente remueve o deshabilita
 las cuentas temporales y de emergencia luego de un periodo de tiempo
 definido por la organización para cada tipo de cuenta.
 
-. [[r2]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[+NIST+ 800-53 AC-2 (13)]
+. [[r2]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-2[NIST 800-53 AC-2 (13)]
 The organization disables accounts of users posing a significant risk
 within [Assignment: organization-defined time period]
 of discovery of the risk.
+
+. [[r3]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+Application functions related to authentication and session management are
+often implemented incorrectly,
+allowing attackers to compromise passwords, keys, or session tokens,
+or to exploit other implementation flaws to assume other users’ identities
+temporarily or permanently.
