--- a/content/pages/rules/session/028/index.adoc
+++ b/content/pages/rules/session/028/index.adoc
@@ -34,7 +34,14 @@ an attacker to reuse old session credentials or session IDs for authorization.
 Secrets used for session binding SHALL be erased or invalidated by the session
 subject when the subscriber logs out.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r4]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+Application functions related to authentication and session management are
+often implemented incorrectly,
+allowing attackers to compromise passwords, keys, or session tokens,
+or to exploit other implementation flaws to assume other users’ identities
+temporarily or permanently.
+
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V3.3 Session Logout and Timeout Requirements.(3.3.4)]
 Verify that users are able to view and log out of any or all currently active
 sessions and devices.
