feat(doc): #2994.250 add owasp top 10 refs
- Added OWASP Top 10 references to R145, R176, R177, R180, R181,
R183, R184, R185, R300 and R329
- Adjusted R329 SEO description for length compliance
- Fixed some minor typos


Former-commit-id: 5e64df12c46937285a749bb84d508b37c51ae48e

--- a/content/pages/rules/data/177/index.adoc
+++ b/content/pages/rules/data/177/index.adoc
@@ -57,23 +57,32 @@ of the personal data,
 including protection against unauthorized or unlawful processing and against
 accidental loss, destruction or damage.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A3-Sensitive_Data_Exposure[OWASP Top 10 A3:2017-Sensitive Data Exposure].
+Many web applications and **API**s do not properly protect sensitive data,
+such as financial, healthcare, and *PII*.
+Attackers may steal or modify such weakly protected data to conduct credit card
+fraud, identity theft, or other crimes.
+Sensitive data may be compromised without extra protection,
+such as encryption at rest or in transit, and requires special precautions when
+exchanged with the browser.
+
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V8.1 General Data Protection.(8.1.1)]
 Verify the application protects sensitive data from being cached in server
 components such as load balancers and application caches.
 
-. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V8.1 General Data Protection.(8.1.2)]
 Verify that all cached or temporary copies of sensitive data stored on the
 server are protected from unauthorized access or purged/invalidated after the
 authorized user accesses the sensitive data.
 
-. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V8.2 Client-side Data Protection.(8.2.1)]
 Verify the application sets sufficient anti-caching headers so that sensitive
 data is not cached in modern browsers.
 
-. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V8.2 Client-side Data Protection.(8.2.2)]
 Verify that data stored in client side storage (such as HTML5 local storage,
 session storage, IndexedDB, regular cookies or Flash cookies) does not contain
