feat(doc): #2994.251 add owasp top 10 refs
- Added OWASP Top 10 references to R037, R339, R083, R032, R156,
R349, R264, R336, R338 and R045
- Fixed some minor typos


Former-commit-id: ac923da7fdd3410055d0164342df7261de97e594

--- a/content/pages/rules/data/329/index.adoc
+++ b/content/pages/rules/data/329/index.adoc
@@ -54,8 +54,8 @@ freedoms.
 
 . [[r5]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 7.1 Session Bindings]
 Secrets used for session binding SHOULD NOT be placed in insecure locations
-such as HTML5 Local Storage due to the potential exposure of local storage to
-cross-site scripting (XSS) attacks.
+such as *HTML5* Local Storage due to the potential exposure of local storage to
+cross-site scripting (*XSS*) attacks.
 
 . [[r6]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A3-Sensitive_Data_Exposure[OWASP Top 10 A3:2017-Sensitive Data Exposure].
 Many web applications and **API**s do not properly protect sensitive data,
