feat(doc): #2994.252 add owasp top 10 refs
- Added OWASP Top 10 references to R024, R029, R261, R062, R157,
R321, R266, R320, R033 and R035
- Fixed some minor grammar issues


Former-commit-id: a97abb0f3fd5e6f3d34f8a220ff5b6942ccb9638

--- a/content/pages/rules/out-of-scope/authorization/097/index.adoc
+++ b/content/pages/rules/out-of-scope/authorization/097/index.adoc
@@ -5,11 +5,11 @@
 :rules: yes
 :extended: yes
 
-= R097. Define control access model
+= R097. Define an access control model
 
 == Requirement
 
-The organization must define a control access model for the systems.
+The organization must define an access control model for the systems.
 
 == References
 
