--- a/content/pages/rules/architecture/266/index.adoc
+++ b/content/pages/rules/architecture/266/index.adoc
@@ -60,35 +60,42 @@ interface for interaction with external actors,
 but the interface includes a dangerous method or function that is not properly
 restricted.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r4]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A5-Broken_Access_Control[OWASP Top 10 A5:2017-Broken Access Control].
+Restrictions on what authenticated users are allowed to do are often not
+properly enforced.
+Attackers can exploit these flaws to access unauthorized functionality and/or
+data, such as access other users’ accounts, view sensitive files,
+modify other users’ data, change access rights, etc.
+
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 Appendix C: Internet of Things Verification Requirements.(C.1)]
 Verify that application layer debugging interfaces such *USB*, *UART*,
 and other serial variants are disabled or protected by a complex password.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 Appendix C: Internet of Things Verification Requirements.(C.4)]
 Verify that on-chip debugging interfaces such as *JTAG* or *SWD* are disabled
 or that an available protection mechanism is enabled and configured
 appropriately.
 
-. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 Appendix C: Internet of Things Verification Requirements.(C.11)]
 Verify that any use of banned *C* functions are replaced with the appropriate
 safe equivalent functions.
 
-. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.4 Access Control Architectural Requirements.(1.4.1)]
 Verify that trusted enforcement points such as at access control gateways,
 servers, and serverless functions enforce access controls.
 Never enforce access controls on the client.
 
-. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V4.1 General Access Control Design.(4.1.1)]
 Verify that the application enforces access control rules on a trusted service
 layer,
 especially if client-side access control is present and could be bypassed.
 
-. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V6.2 Algorithms.(6.2.5)]
 Verify that known insecure block modes (i.e. *ECB*, etc.), padding modes
 (i.e. **PKCS#1** v1.5, etc.), ciphers with small block sizes
@@ -96,21 +103,21 @@ Verify that known insecure block modes (i.e. *ECB*, etc.), padding modes
 (i.e. *MD5*, *SHA1*, etc.) are not used unless required for backwards
 compatibility.
 
-. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V9.1 Communications Security Requirements.(9.1.3)]
 Verify that old versions of *SSL* and *TLS* protocols, algorithms, ciphers, and
 configuration are disabled,
 such as *SSLv2*, *SSLv3*, or *TLS* 1.0 and *TLS* 1.1.
 The latest version of *TLS* should be the preferred cipher suite.
 
-. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.2 Dependency.(14.2.2)]
 Verify that all unneeded features, documentation, samples, configurations are
 removed,
 such as sample applications, platform documentation, and default or example
 users.
 
-. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r13]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.5 Validate HTTP Request Header Requirements.(14.5.1)]
 Verify that the application server only accepts the *HTTP* methods in use by
 the application or *API*, including pre-flight *OPTIONS*.
