--- a/content/pages/rules/authorization/033/index.adoc
+++ b/content/pages/rules/authorization/033/index.adoc
@@ -68,7 +68,14 @@ The software uses a primary channel for administration or restricted
 functionality,
 but it does not properly protect the channel.
 
-. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r2]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A5-Broken_Access_Control[OWASP Top 10 A5:2017-Broken Access Control].
+Restrictions on what authenticated users are allowed to do are often not
+properly enforced.
+Attackers can exploit these flaws to access unauthorized functionality and/or
+data, such as access other users’ accounts, view sensitive files,
+modify other users’ data, change access rights, etc.
+
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V13.1 Generic Web Service Security Verification Requirements.(13.1.2)]
 Verify that access to administration and management functions is limited to
 authorized administrators.
