--- a/content/pages/rules/data/321/index.adoc
+++ b/content/pages/rules/data/321/index.adoc
@@ -55,7 +55,14 @@ Even if deserialization flaws do not result in remote code execution,
 they can be used to perform attacks,
 including replay attacks, injection attacks, and privilege escalation attacks.
 
-. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A4-XML_External_Entities_(XXE)[OWASP Top 10 A4:2017-XML External Entities (XXE)].
+Many older or poorly configured *XML* processors evaluate external entity
+references within *XML* documents.
+External entities can be used to disclose internal files using the file *URI*
+handler, internal file shares, internal port scanning, remote code execution,
+and denial of service attacks.
+
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.5 Input and Output Architectural Requirements.(1.5.2)]
 Verify that serialization is not used when communicating with untrusted
 clients.
@@ -64,29 +71,29 @@ ensure that adequate integrity controls
 (and possibly encryption if sensitive data is sent)
 are enforced to prevent deserialization attacks including object injection.
 
-. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.5 Deserialization Prevention Requirements.(5.5.1)]
 Verify that serialized objects use integrity checks or are encrypted to prevent
 hostile object creation or data tampering.
 
-. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.5 Deserialization Prevention Requirements.(5.5.3)]
 Verify that deserialization of untrusted data is avoided or is protected in
 both custom code and third-party libraries
 (such as *JSON*, *XML* and *YAML* parsers).
 
-. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.5 Deserialization Prevention Requirements.(5.5.4)]
 Verify that when parsing *JSON* in browsers or JavaScript-based backends,
 **JSON.parse** is used to parse the *JSON* document.
 Do not use **eval()** to parse *JSON*.
 
-. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V13.2 RESTful Web Service Verification Requirements.(13.2.2)]
 Verify that *JSON* schema validation is in place and verified before accepting
 input.
 
-. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V13.3 SOAP Web Service Verification Requirements.(13.3.1)]
 Verify that *XSD* schema validation takes place to ensure a properly formed
 *XML* document,
